--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "St. Jude Cloud Theme and Guidelines",
   "main": "index.js",
   "scripts": {
-    "css-compile-all": "npm run css-compile-main && npm run css-compile-guide",
+    "css-compile-all": "npm run css-lint-all && npm run css-compile-main && npm run css-compile-guide",
     "css-compile-main": "node-sass --importer node_modules/node-sass-package-importer/dist/cli.js --output-style expanded --source-map true --source-map-contents true --precision 6 scss/stjude-cloud-theme.scss dist/css/stjude-cloud-theme.css",
     "css-compile-guide": "node-sass --importer node_modules/node-sass-package-importer/dist/cli.js --output-style expanded --source-map true --source-map-contents true --precision 6 guide/scss/styles.scss guide/css/styles.css",
-    "css-minify": "cleancss --level 1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/css/stjude-cloud-theme.min.css dist/css/stjude-cloud-theme.css"
+    "css-minify": "cleancss --level 1 --format breakWith=lf --source-map --source-map-inline-sources --output dist/css/stjude-cloud-theme.min.css dist/css/stjude-cloud-theme.css",
+    "css-lint-all": "npm run css-lint-main && npm run css-lint-guide",
+    "css-lint-main": "stylelint \"scss/**/*.scss\" --cache --cache-location .cache/.stylelintcache",
+    "css-lint-guide": "stylelint \"guide/scss/**/*.scss\" --cache --cache-location .cache/.stylelintcache"
   },
   "repository": {
     "type": "git",
@@ -35,6 +38,8 @@
     "bootstrap": "4.3.1",
     "clean-css-cli": "^4.3.0",
     "node-sass": "^4.12.0",
-    "node-sass-package-importer": "^5.3.1"
+    "node-sass-package-importer": "^5.3.1",
+    "stylelint": "^10.1.0",
+    "stylelint-config-twbs-bootstrap": "^0.4.0"
   }
 }
